# vmra

./: CMakeLists.txt  README.md  TODO.md
include/util/: log.h
src/: main.c
src/util/: log.c
